[gd_scene load_steps=4 format=3 uid="uid://3johgxhqu2xj"]

[ext_resource type="Script" path="res://screens/Settings.gd" id="1_xfgys"]
[ext_resource type="AudioStream" uid="uid://de6dxceu5nmlp" path="res://screens/programms/CommandLineRofls/puk-v-ekho.mp3" id="2_ssltj"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_n5jf5"]
properties/0/path = NodePath("Window:visible")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath("Window:position")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath("Window:size")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath("Window/VBoxContainer/Miner/Miner:button_pressed")
properties/3/spawn = true
properties/3/sync = true
properties/4/path = NodePath("Window/VBoxContainer/BackDoor/BackDoor:button_pressed")
properties/4/spawn = true
properties/4/sync = true
properties/5/path = NodePath("Window/VBoxContainer/WannaCry/WannaCry:button_pressed")
properties/5/spawn = true
properties/5/sync = true
properties/6/path = NodePath("Window/VBoxContainer/Trojanus/Trojanus:button_pressed")
properties/6/spawn = true
properties/6/sync = true

[node name="Node" type="Node"]
script = ExtResource("1_xfgys")

[node name="Window" type="Window" parent="."]
title = "Settings"
position = Vector2i(20, 40)
size = Vector2i(150, 265)
min_size = Vector2i(150, 150)
max_size = Vector2i(300, 500)

[node name="VBoxContainer" type="VBoxContainer" parent="Window"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Miner" type="Panel" parent="Window/VBoxContainer"]
custom_minimum_size = Vector2(1280, 50)
layout_mode = 2

[node name="Miner" type="CheckButton" parent="Window/VBoxContainer/Miner"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_right = 44.0
offset_bottom = 12.0
grow_vertical = 2
flat = true

[node name="Label" type="Label" parent="Window/VBoxContainer/Miner"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -13.0
offset_right = 96.0
offset_bottom = 13.0
grow_vertical = 2
text = "Miner"

[node name="Trojan" type="Panel" parent="Window/VBoxContainer"]
custom_minimum_size = Vector2(1280, 50)
layout_mode = 2

[node name="Trojan" type="CheckButton" parent="Window/VBoxContainer/Trojan"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_right = 44.0
offset_bottom = 12.0
grow_vertical = 2
flat = true

[node name="Label" type="Label" parent="Window/VBoxContainer/Trojan"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -13.0
offset_right = 96.0
offset_bottom = 13.0
grow_vertical = 2
text = "BackDoor (host)"

[node name="BackDoor" type="Panel" parent="Window/VBoxContainer"]
custom_minimum_size = Vector2(1280, 50)
layout_mode = 2

[node name="BackDoor" type="CheckButton" parent="Window/VBoxContainer/BackDoor"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_right = 44.0
offset_bottom = 12.0
grow_vertical = 2
flat = true

[node name="Label" type="Label" parent="Window/VBoxContainer/BackDoor"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -13.0
offset_right = 96.0
offset_bottom = 13.0
grow_vertical = 2
text = "BackDoor (join)"

[node name="WannaCry" type="Panel" parent="Window/VBoxContainer"]
custom_minimum_size = Vector2(1280, 50)
layout_mode = 2

[node name="WannaCry" type="CheckButton" parent="Window/VBoxContainer/WannaCry"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_right = 44.0
offset_bottom = 12.0
grow_vertical = 2
flat = true

[node name="Label" type="Label" parent="Window/VBoxContainer/WannaCry"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -13.0
offset_right = 96.0
offset_bottom = 13.0
grow_vertical = 2
text = "WannaCry"

[node name="Trojanus" type="Panel" parent="Window/VBoxContainer"]
custom_minimum_size = Vector2(1280, 50)
layout_mode = 2

[node name="Trojanus" type="CheckButton" parent="Window/VBoxContainer/Trojanus"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_right = 44.0
offset_bottom = 12.0
grow_vertical = 2
flat = true

[node name="Label" type="Label" parent="Window/VBoxContainer/Trojanus"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -13.0
offset_right = 96.0
offset_bottom = 13.0
grow_vertical = 2
text = "Trojan"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_n5jf5")

[node name="puk-v-ekho" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ssltj")

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="toggled" from="Window/VBoxContainer/Miner/Miner" to="." method="_on_miner_toggled"]
[connection signal="toggled" from="Window/VBoxContainer/Trojan/Trojan" to="." method="_on_trojan_toggled"]
[connection signal="toggled" from="Window/VBoxContainer/BackDoor/BackDoor" to="." method="_on_back_door_toggled"]
[connection signal="toggled" from="Window/VBoxContainer/WannaCry/WannaCry" to="." method="_on_wanna_cry_toggled"]
[connection signal="toggled" from="Window/VBoxContainer/Trojanus/Trojanus" to="." method="_on_trojanus_toggled"]
